--- a/manifest-5.2
+++ b/manifest-5.2
@@ -1,6 +1,13 @@
 commands = {}
 modules = {}
 repository = {
+   argcheck = {
+      ['scm-1'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
    async = {
       ['scm-1'] = {
          {
@@ -94,6 +101,13 @@ repository = {
    },
    ffmpeg = {
       ['1.0-0'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
+   fftw3 = {
+      ['scm-1'] = {
          {
             arch = "rockspec"
          }
