added cairo + class packages

--- a/manifest-5.1
+++ b/manifest-5.1
@@ -29,6 +29,13 @@ repository = {
          }
       }
    },
+   cairo = {
+      ['scm-1'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
    camera = {
       ['1.0-0'] = {
          {
@@ -38,6 +45,13 @@ repository = {
    },
    cephes = {
       ['0-0'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
+   class = {
+      ['scm-1'] = {
          {
             arch = "rockspec"
          }
@@ -302,6 +316,13 @@ repository = {
       }
    },
    sdl2 = {
+      ['scm-1'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
+   signal = {
       ['scm-1'] = {
          {
             arch = "rockspec"
