updated make_manifest.lua for the new luarocks 2.2.0, also readded the gm rockspec

--- a/manifest-5.1
+++ b/manifest-5.1
@@ -196,6 +196,13 @@ repository = {
          }
       }
    },
+   gm = {
+      ['scm-1'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
    gnuplot = {
       ['scm-1'] = {
          {
