--- a/manifest-5.2
+++ b/manifest-5.2
@@ -196,6 +196,13 @@ repository = {
          }
       }
    },
+   gm = {
+      ['scm-1'] = {
+         {
+            arch = "rockspec"
+         }
+      }
+   },
    gnuplot = {
       ['scm-1'] = {
          {
